<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/statusbar"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/retinopathy"
            android:paddingLeft="25dp"
            android:background="@color/primary"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:gravity="center_vertical"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/statusbar">

        <ImageView
            android:id="@+id/select_retina_image"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="50dp"
            android:scaleType="centerCrop"
            android:background="@color/grey" />

        <Button
            android:id="@+id/select_image_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/select_retina_image"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="25dp"
            android:padding="8dp"
            android:text="@string/select_image"
            android:textSize="20sp" />

        <Button
            android:id="@+id/predict_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/select_retina_image"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:padding="8dp"
            android:visibility="invisible"
            android:text="@string/predict"
            android:textSize="20sp" />

    </RelativeLayout>

</RelativeLayout>